# rover_ros2

./: .gitignore  files.txt
src/rover_firmware/: CMakeLists.txt  package.xml  rover_interface.xml
src/rover_firmware/firmware/simple_encoder_reader/: simple_encoder_reader.ino
src/rover_firmware/firmware/simple_motor_control/: simple_motor_control.ino
src/rover_firmware/firmware/simple_serial_receiver/: simple_serial_receiver.ino
src/rover_firmware/include/rover_firmware/: rover_interface.hpp
src/rover_firmware/rover_firmware/: camera.py
src/rover_firmware/src/: rover_interface.cpp  simple_serial_receiver.cpp  simple_serial_transmitter.cpp
src/rover_frimware/: CMakeLists.txt
